[package]
name = "app-rs-codegen"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
# --- WORKSPACE --- #

anyhow.workspace = true
argh.workspace = true
flutter_rust_bridge_codegen.workspace = true
# For finding all *.toml files in the workspace
ignore.workspace = true
