[package]
name = "app-rs"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = ["flutter"]
# This feature enables flutter-only dependencies.
# Disabling this feature removes a lot of gunk from our smoketests.
flutter = [
    "dep:fast_qr",
    "dep:flutter_rust_bridge",
]

[dependencies]
# --- LEXE --- #

common.path = "../common"
gdrive.path = "../gdrive"
hex.path = "../hex"
lexe = { path = "../lexe", features = ["unstable"] }
lexe-api.path = "../lexe-api"
lexe-std.path = "../lexe-std"
lexe-tls.path = "../lexe-tls"
lexe-tokio.path = "../lexe-tokio"
node-client.path = "../node-client"
payment-uri.path = "../payment-uri"

# --- WORKSPACE --- #

anyhow.workspace = true
arc-swap.workspace = true
cfg-if.workspace = true
async-trait.workspace = true
base64.workspace = true
bitcoin.workspace = true
bip39.workspace = true
http.workspace = true
keyring = { workspace = true, default-features = false, features = [
    "platform-macos",
    "platform-ios",
    "linux-secret-service-rt-tokio-crypto-rust",
] }
reqwest = { workspace = true, features = ["json"] }
secrecy.workspace = true
semver = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = [
    "registry",
    "std",
] }

# --- OPTIONAL --- #

flutter_rust_bridge = { workspace = true, optional = true, features = [
    "anyhow",
    "backtrace",
    "dart-opaque",
    "thread-pool",
    "rust-async",
] }

# --- CRATE-SPECIFIC --- #

# Only enable QR code generation when actually building for app
fast_qr = { workspace = true, optional = true }

# TODO(phlip9): uncomment when I need this
# [target.'cfg(target_os = "android")'.dependencies]
# jni = "0.21"

[dev-dependencies]
common = { path = "../common", features = ["test-utils"] }
lexe = { path = "../lexe", features = ["test-utils", "unstable"] }
lexe-api = { path = "../lexe-api", features = ["test-utils"] }

async-trait.workspace = true
proptest = { workspace = true, features = ["alloc"] }
proptest-derive.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
