[package]
name = "byte-array"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

# Default config for testing in SGX
[package.metadata.fortanix-sgx]

[dependencies]
# --- LEXE --- #

hex.path = "../hex"

# --- WORKSPACE --- #

ref-cast.workspace = true
