[package]
name = "byte-array"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
publish = true

# Default config for testing in SGX
[package.metadata.fortanix-sgx]

[dependencies]
# --- LEXE --- #

lexe-hex.path = "../lexe-hex"

# --- WORKSPACE --- #

ref-cast.workspace = true
