[package]
name = "common"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
# Explicitly specify that no features should be enabled by default.
default = []
# Enables various test hooks and utilities. Should be disabled in staging/prod.
test-utils = [
  "dep:chrono",
  "dep:electrsd",
  "dep:proptest",
  "dep:proptest-derive",
  "dep:serde_urlencoded",
]

[package.metadata.fortanix-sgx]
# stack size (in bytes) for each thread, the default stack size is 0x20_000.
stack-size = 0x20_0000
# The max number of threads we can spawn concurrently inside the SGX enclave.
# We give some extra room because `#[tokio::test(start_paused = true)]` etc
# spawns threads in the background. Additionally, the current fortanix rust-sgx
# `async_usercalls` implementation requires an extra thread. see:
# https://github.com/lexe-app/rust-sgx/blob/70d11205fed08e49886bb25a1ea3df19928e8287/async-usercalls/src/queues.rs#L46
threads = 8

[dependencies]

# --- LEXE --- #

byte-array = { path = "../byte-array" }
const-utils = { path = "../const-utils" }
hex = { path = "../hex" }
sha256 = { path = "../sha256" }

# --- WORKSPACE --- #

anyhow.workspace = true
asn1-rs.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = ["json", "query"] }
bitcoin = { workspace = true, features = ["serde"] }
bitcoin_hashes.workspace = true
bitcoin-bech32.workspace = true
base64.workspace = true
bytes.workspace = true
cfg-if.workspace = true
dotenvy.workspace = true
futures.workspace = true
http.workspace = true
http-body-util.workspace = true
lightning.workspace = true
lightning-invoice.workspace = true
# lightning-net-tokio.workspace = true
# lightning-transaction-sync.workspace = true
rand.workspace = true
rand_core.workspace = true
rcgen.workspace = true
ref-cast.workspace = true
reqwest = { workspace = true, features = ["json"] }
ring.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
rustls.workspace = true
secrecy.workspace = true
semver = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
sgx-isa.workspace = true
strum.workspace = true
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "rt",
    "sync",
    "time"
] }
tower.workspace = true # TODO(max): Remove
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
tracing-subscriber.workspace = true
x509-parser.workspace = true

# --- CRATE-SPECIFIC --- #

# Binary canonical serialization format
bcs = "0.1"
# BIP39 mnemonic codes
bip39 = { version = "2", features = ["zeroize"] }

# --- OPTIONAL --- #
# These must have `optional = true` to prevent infecting production binaries.

chrono = { optional = true, workspace = true }
proptest = { optional = true, workspace = true, features = ["alloc"] }
proptest-derive = { optional = true, workspace = true }
serde_urlencoded = { optional = true, workspace = true }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
# Bitcoind + electrum + esplora regtest
# Note that electrsd reexports bitcoind and electrum-client in its crate root.
# Note that this crate is additionally declared in the non-SGX dev dependencies.
# If bitcoind init is flaking in tests, consider downgrading to 22_0:
# https://github.com/RCasatta/bitcoind/issues/101
electrsd = { optional = true, version = "0.28", features = ["bitcoind_23_1", "esplora_a33e97e1", "legacy"] }
# Enable the `client-legacy-socket2` feature from our patch when outside of SGX.
# This can be removed if our `client-legacy-socket2` patch is removed.
# Include std impls when testing outside of SGX
hyper-util = { workspace = true, features = ["client-legacy-socket2"] }
proptest = { optional = true, workspace = true, features = ["std"] }

[dev-dependencies]
chrono.workspace = true
proptest = { workspace = true, features = ["alloc"] }
proptest-derive.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "rt",
    "sync",
    "test-util",
    "time"
] }
# Utilities for testing futures
tokio-test = "0.4"

[target.'cfg(target_env = "sgx")'.dev-dependencies]
# Print backtraces in tests
sgx-panic-backtrace = "0.1"

[target.'cfg(not(target_env = "sgx"))'.dev-dependencies]
# Bitcoind + electrum + esplora regtest
electrsd = { version = "0.28", features = ["bitcoind_23_1", "esplora_a33e97e1", "legacy"] }
# Include std impls when testing outside of SGX
proptest = { workspace = true, features = ["std"] }
