[package]
name = "common"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

# Config for testing in SGX
[package.metadata.fortanix-sgx]
# Need larger stacks for tokio threads (Default: 0x2_0000)
stack-size = 0x20_0000
# The max number of threads we can spawn concurrently inside the SGX enclave.
# We give some extra room because the current fortanix rust-sgx
# `async_usercalls` implementation requires an extra thread. see:
# https://github.com/lexe-app/rust-sgx/blob/70d11205fed08e49886bb25a1ea3df19928e8287/async-usercalls/src/queues.rs#L46
threads = 4

[features]
# Explicitly specify that no features should be enabled by default.
default = []
# Enables various test hooks and utilities. Should be disabled in staging/prod.
test-utils = [
  "dep:chrono",
  "dep:proptest",
  "dep:proptest-derive",
  "dep:serde_urlencoded",
]

[dependencies]

# --- LEXE --- #

byte-array.path = "../byte-array"
hex = { path = "../hex", features = ["bytes"] }
lexe-std = { path = "../lexe-std", features = ["ref-cast"] }
sha256.path = "../sha256"

# --- WORKSPACE --- #

anyhow.workspace = true
asn1-rs.workspace = true
async-trait.workspace = true
base64.workspace = true
bcs.workspace = true
bip39.workspace = true
bitcoin = { workspace = true, features = ["serde"] }
bytes.workspace = true
cfg-if.workspace = true
dotenvy.workspace = true
http-body-util.workspace = true
http.workspace = true
lightning-invoice.workspace = true
lightning.workspace = true
rand.workspace = true
rand_core.workspace = true
rcgen.workspace = true
ref-cast.workspace = true
ring.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
secrecy.workspace = true
semver = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
sgx-isa.workspace = true
strum.workspace = true
thiserror.workspace = true
tracing.workspace = true
x509-parser.workspace = true

# --- OPTIONAL --- #
# These must have `optional = true` to prevent infecting production binaries.

chrono = { optional = true, workspace = true }
proptest = { optional = true, workspace = true, features = ["alloc"] }
proptest-derive = { optional = true, workspace = true }
serde_urlencoded = { optional = true, workspace = true }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
# Include std impls when testing outside of SGX
proptest = { optional = true, workspace = true, features = ["std"] }

[dev-dependencies]
chrono.workspace = true
proptest = { workspace = true, features = ["alloc"] }
proptest-derive.workspace = true
serde_urlencoded.workspace = true
yasna.workspace = true

[target.'cfg(not(target_env = "sgx"))'.dev-dependencies]
# Include std impls when testing outside of SGX
proptest = { workspace = true, features = ["std"] }
