[package]
name = "gdrive"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
# --- LEXE --- #

common.path = "../common"
const-utils.path = "../const-utils"
lexe-std.path = "../lexe-std"
sha256.path = "../sha256"

# --- WORKSPACE --- #

anyhow.workspace = true
base64.workspace = true
futures.workspace = true
thiserror.workspace = true
reqwest = { workspace = true, features = ["json", "multipart"] }
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync"] }

# --- CRATE-SPECIFIC --- #

[dev-dependencies]
common = { path = "../common", features = ["test-utils"] }
logger = { path = "../logger", features = ["test-utils"] }

proptest.workspace = true
proptest-derive.workspace = true
tokio = { workspace = true, features = [
    "macros",
    "sync",
    "test-util"
] }
