[package]
name = "gdrive"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
publish = false

# Default config for testing in SGX
[package.metadata.fortanix-sgx]

[dependencies]
# --- LEXE --- #

lexe-api-core.path = "../lexe-api-core"
lexe-byte-array.path = "../lexe-byte-array"
lexe-common.path = "../lexe-common"
lexe-sha256.path = "../lexe-sha256"
lexe-std.path = "../lexe-std"

# --- WORKSPACE --- #

anyhow.workspace = true
base64.workspace = true
bytes.workspace = true
futures.workspace = true
reqwest = { workspace = true, features = ["json", "multipart"] }
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true

# --- CRATE-SPECIFIC --- #

[dev-dependencies]
lexe-common = { path = "../lexe-common", features = ["test-utils"] }
lexe-logger = { path = "../lexe-logger", features = ["test-utils"] }

proptest.workspace = true
proptest-derive.workspace = true
tokio = { workspace = true, features = [
    "macros",
    "sync",
    "test-util"
] }
