[package]
name = "gdrive"
license = "PolyForm-Noncommercial-1.0.0"
authors = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
publish = false

# Default config for testing in SGX
[package.metadata.fortanix-sgx]

[dependencies]
# --- LEXE --- #

lexe-api-core = { workspace = true }
lexe-byte-array = { workspace = true }
lexe-common = { workspace = true }
lexe-crypto = { workspace = true }
lexe-sha256 = { workspace = true }
lexe-std = { workspace = true }

# --- WORKSPACE --- #

anyhow = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

# --- CRATE-SPECIFIC --- #

[dev-dependencies]
lexe-common = { workspace = true, features = ["test-utils"] }
lexe-logger = { workspace = true, features = ["test-utils"] }

proptest = { workspace = true }
proptest-derive = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "sync",
    "test-util"
] }
