[package]
name = "hex"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]

[dev-dependencies]
proptest = { workspace = true, features = ["alloc"] }

[target.'cfg(not(target_env = "sgx"))'.dev-dependencies]
# Include std impls when testing outside of SGX
proptest = { workspace = true, features = ["std"] }
