[package]
name = "hex"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

# Default config for testing in SGX
[package.metadata.fortanix-sgx]

[features]
default = []
bytes = ["dep:bytes"]

[dependencies]
bytes = { optional = true, workspace = true }

[dev-dependencies]
proptest = { workspace = true, features = ["alloc"] }

[target.'cfg(not(target_env = "sgx"))'.dev-dependencies]
# Include std impls when testing outside of SGX
proptest = { workspace = true, features = ["std"] }
