[package]
name = "lexe-api-core"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
# Enable `axum`-related impls, notably `IntoResponse`,
axum = ["dep:axum", "dep:http-body-util"]
# Enable `reqwest`-related impls
reqwest = ["dep:reqwest"]
# Enables various test hooks and utilities. Should be disabled in staging/prod.
test-utils = [
  "common/test-utils",
  "dep:proptest",
  "dep:proptest-derive",
]

[dependencies]

# --- LEXE --- #

byte-array.path = "../byte-array"
common.path = "../common"
hex = { path = "../hex", features = ["bytes"] }
lexe-std.path = "../lexe-std"
sha256.path = "../sha256"

# --- WORKSPACE --- #

anyhow.workspace = true
async-trait.workspace = true
bcs.workspace = true
bitcoin = { workspace = true, features = ["serde"] }
bytes.workspace = true
futures.workspace = true
http.workspace = true
lightning.workspace = true
lightning-invoice.workspace = true
ref-cast.workspace = true
secrecy.workspace = true
semver = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
strum.workspace = true
thiserror.workspace = true
tracing.workspace = true

# --- OPTIONAL --- #

axum = { optional = true, workspace = true, features = [] }
http-body-util = { optional = true, workspace = true }
proptest = { optional = true, workspace = true, features = ["alloc"] }
proptest-derive = { optional = true, workspace = true }
reqwest = { optional = true, workspace = true }

[dev-dependencies]
common = { path = "../common", features = ["test-utils"] }
proptest = { workspace = true, features = ["alloc"] }
proptest-derive.workspace = true
serde_urlencoded.workspace = true
