[package]
name = "lexe-api-core"
license = "MIT"
authors = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
publish = true

# Config for testing in SGX
[package.metadata.fortanix-sgx]
stack-size = 0x20_0000
threads = 4

[features]
default = []
# Enable `axum`-related impls, notably `IntoResponse`,
axum = ["dep:axum", "dep:http-body-util"]
# Enable `reqwest`-related impls
reqwest = ["dep:reqwest"]
# Enables various test hooks and utilities. Should be disabled in staging/prod.
test-utils = [
  "dep:proptest",
  "dep:proptest-derive",
  "lexe-common/test-utils",
]

[dependencies]

# --- LEXE --- #

lexe-byte-array = { path = "../lexe-byte-array" }
lexe-common = { path = "../lexe-common" }
lexe-sha256 = { path = "../lexe-sha256" }
lexe-std = { path = "../lexe-std" }

# --- WORKSPACE --- #

anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bcs = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
lightning = { workspace = true }
lightning-invoice = { workspace = true }
ref-cast = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
secrecy = { workspace = true }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# --- OPTIONAL --- #

axum = { optional = true, workspace = true, features = [] }
http-body-util = { optional = true, workspace = true }
proptest = { optional = true, workspace = true, features = ["alloc"] }
proptest-derive = { optional = true, workspace = true }
reqwest = { optional = true, workspace = true }

[dev-dependencies]
lexe-common = { path = "../lexe-common", features = ["test-utils"] }
lexe-hex = { path = "../lexe-hex" }

proptest = { workspace = true, features = ["alloc"] }
proptest-derive = { workspace = true }
serde_urlencoded = { workspace = true }
