[package]
name = "lexe-api-core"
version = "0.1.3"
license = "MIT"
description = "Core Lexe API types and traits"
documentation = "https://docs.rs/lexe-api-core"
authors = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
exclude = [
    "/test_data"
]
publish = true

# Config for testing in SGX
[package.metadata.fortanix-sgx]
stack-size = 0x20_0000
threads = 4

[features]
default = []
# Enable `axum`-related impls, notably `IntoResponse`,
axum = ["dep:axum", "dep:http-body-util"]
# Enable `reqwest`-related impls
reqwest = ["dep:reqwest"]
# Enables various test hooks and utilities. Should be disabled in staging/prod.
test-utils = [
  "dep:proptest",
  "dep:proptest-derive",
  "lexe-common/test-utils",
  "lexe-crypto/test-utils",
]

[dependencies]

# --- LEXE --- #

lexe-byte-array = { workspace = true }
lexe-common = { workspace = true }
lexe-crypto = { workspace = true }
lexe-enclave = { workspace = true }
lexe-serde = { workspace = true }
lexe-sha256 = { workspace = true }
lexe-std = { workspace = true }

# --- WORKSPACE --- #

anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bcs = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
lightning = { workspace = true }
lightning-invoice = { workspace = true }
ref-cast = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
secrecy = { workspace = true }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# --- OPTIONAL --- #

axum = { optional = true, workspace = true, features = [] }
http-body-util = { optional = true, workspace = true }
proptest = { optional = true, workspace = true, features = ["alloc"] }
proptest-derive = { optional = true, workspace = true }
reqwest = { optional = true, workspace = true }

[dev-dependencies]
lexe-common = { workspace = true, features = ["test-utils"] }
lexe-hex = { workspace = true }

proptest = { workspace = true, features = ["alloc"] }
proptest-derive = { workspace = true }
serde_urlencoded = { workspace = true }
